testdata/baselines/reference/submodule/compiler/tsxDeepAttributeAssignabilityError.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
file1.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
my-component.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== my-component.tsx (1 errors) ====
    import * as React from 'react'
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface MyProps {
        x: string;
        y: MyInnerProps;
    }
    
    interface MyInnerProps {
        value: string;
    }
    
    export function MyComponent(_props: MyProps) {
        return <span>my component</span>;
    }
    
==== file1.tsx (1 errors) ====
    import * as React from 'react'
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    import { MyComponent } from './my-component'
    
    export const result = <MyComponent x="yes" y={{
        value: 42
    }} />;
    